--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==4.2.7
 djangorestframework==3.14.0
 pytest-django==4.7.0
+djangorestframework-simplejwt==5.3.0
+django-cors-headers==4.3.1
+psycopg2==2.9.9
+python-dotenv==1.0.0
